fixing bios, changing phone # color on mobile, adding journal names

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3467,4 +3467,8 @@ figure img {
         .figure {
         	display: inline-block;
         }
+
+        a {
+        	color: #585858;
+        }
     }
